Widgets: Football: Hotfix missing "Passing :Yards" label in non-mobile views, and a few minor layout issues on mobile

--- a/widgets/src/less/base/base.less
+++ b/widgets/src/less/base/base.less
@@ -89,7 +89,8 @@ label {
         }
     }
 
-    .details .ng-binding {
+    .details .ng-binding,
+    .details td.ng-binding-child {
         text-align: center;
     }
 }
